# taller-agentes-universidades

./: .env.example  README.md  pyproject.toml  requirements.txt
scripts/: generar_documento.py
sesion_1/: 1_tokenizacion.py  2_control_creatividad.py  3_roles_system_prompt.py  4_extraccion_json.py  5_function_calling.py
sesion_1/ejercicios/: ejercicio_1_enunciado.py  ejercicio_2_enunciado.py  ejercicio_3_enunciado.py
sesion_1/ejercicios/soluciones/: ejercicio_1_solucion.py  ejercicio_2_solucion.py  ejercicio_3_solucion.py
sesion_2/: 1_busqueda_semantica.py  2_conexion_documentos.py  3_memoria_rag.py  4_uso_herramientas.py  5_loop_agente.py
sesion_2/ejercicios/: ejercicio_1_enunciado.py  ejercicio_2_enunciado.py  ejercicio_3_enunciado.py
